fix: width of loading component on small devices

--- a/src/pages/Landing/styles.scss
+++ b/src/pages/Landing/styles.scss
@@ -30,9 +30,14 @@
 }
 
 .mainInfoLoadingContainer{
-  height: 160px;
-  width: 300px;
-  margin-left: -6rem;
+  width: 100%;  
+  display: flex;
+  justify-content: center;
+  
+  > section{
+    height: 160px;
+    width: 300px;
+  }
 }
 
 .topCards{
@@ -101,8 +106,27 @@
 }
 
 @media(max-width: 768px){
+  .mainContainer{
+    padding: 1rem;
+  }
+
+
+  .topCards{
+    >div{
+      width: 100%;
+    }
+  }
+
   .bottomCards{
     justify-content: center;
     margin-top: 1rem;
+
+    > div{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      align-items: center;
+    }
   }
 }
